# wx-miniprogram-sever

./: .env.example  .gitignore  Cargo.toml
migrations/: 001_init.sql
src/: error.rs  lib.rs  main.rs
src/api/: auth.rs  user.rs
src/config/: app_config.rs
src/middleware/: auth.rs  mod.rs
src/model/: mod.rs  request.rs  session.rs  user.rs
src/repository/: mod.rs  session.rs  user.rs
src/service/: auth.rs  mod.rs  wechat.rs
src/utils/: jwt.rs  mod.rs
